Fix spelling of "GitHub"

--- a/docs/02.md
+++ b/docs/02.md
@@ -5,7 +5,7 @@ out: usage.html
 Usage
 -----
 
-Template repositories must reside on github and be named with the
+Template repositories must reside on GitHub and be named with the
 suffix `.g8`. We're keeping a [list of templates on the wiki][wiki].
 
 To apply a template, for example, [unfiltered/unfiltered.g8][uft]:
@@ -16,7 +16,7 @@ To apply a template, for example, [unfiltered/unfiltered.g8][uft]:
     \$ g8 unfiltered/unfiltered.g8
 
 Giter8 resolves this to the `unfiltered/unfiltered.g8`
-repository and queries Github for the project's template
+repository and queries GitHub for the project's template
 parameters.
 Alternatively, you can also use a git repository full name
 
