--- a/docs/ja/02.md
+++ b/docs/ja/02.md
@@ -5,7 +5,7 @@ out: usage.html
 使用方法
 -------
 
-テンプレートのレポジトリは Github 上では `.g8` で終わる名前を使う規約を勝手に作った。
+テンプレートのレポジトリは GitHub 上では `.g8` で終わる名前を使う規約を勝手に作った。
 [Wiki にテンプレートのリスト][wiki]があるので見てほしい。
 
 例えば、[unfiltered/unfiltered.g8][uft] というテンプレートを適用するには以下を実行する:
@@ -15,7 +15,7 @@ out: usage.html
 
     \$ g8 unfiltered/unfiltered.g8
 
-Giter8 はこれを Github 上の `unfiltered/unfiltered.g8`
+Giter8 はこれを GitHub 上の `unfiltered/unfiltered.g8`
 というレポジトリだと解決してプロジェクトのテンプレートやパラメータを問い合わせる。
 他に、git レポジトリをフルネームで指定することも可能だ。
 
