--- a/docs/ja/04/00.md
+++ b/docs/ja/04/00.md
@@ -32,7 +32,7 @@ className [Application]:
 
 ### scaffold の作り方
 
-g8 ランタイムは、Github プロジェクトがあるとき、`src/main/scaffolds` 以下に scaffold を探しに行く。
+g8 ランタイムは、GitHub プロジェクトがあるとき、`src/main/scaffolds` 以下に scaffold を探しに行く。
 `src/main/scaffolds`内の各ディレクトリは別々の scaffold で、そのディレクトリ名に応じて
 sbt シェルからアクセスできる。通常のテンプレート同様に、scaffold のディレクトリ内には `default.properties`
 を置いてフィールド値を定義することができる。ここでも `name` は特殊なフィールド名で、
