--- a/docs/ko/02.md
+++ b/docs/ko/02.md
@@ -5,7 +5,7 @@ out: usage.html
 사용 방법
 -------
 
-템플릿 리포지토리는 Github 상에서는 `.g8` 로 확장자가 끝나도록 규약을 만들었습니다.
+템플릿 리포지토리는 GitHub 상에서는 `.g8` 로 확장자가 끝나도록 규약을 만들었습니다.
 [Wiki에 등록된 템플릿 목록][wiki] 를 통해 관리하고 있습니다.
 
 예를들면 [unfiltered/unfiltered.g8][uft] 라는 템플릿을 적용하기 위해서는 다음을 실행합니다.
