--- a/docs/ko/04/00.md
+++ b/docs/ko/04/00.md
@@ -32,7 +32,7 @@ className [Application]:
 
 ### scaffold 를 만드는 방법
 
-g8 런타임은 Github 프로젝트가 있을 때, `src/main/scaffolds` 이하의 scaffold 를 찾습니다.
+g8 런타임은 GitHub 프로젝트가 있을 때, `src/main/scaffolds` 이하의 scaffold 를 찾습니다.
 `src/main/scaffolds` 안의 각 디렉토리는 각개의 scaffold 로서, 디렉토리명에 따라, 
 sbt 쉘에서 엑세스 가능합니다. 일반적으로 템플릿과 마찬가지로, scaffold 디렉토리에, `default.properties`파일을 두고
 필드값을 정의하는것이 가능합니다. 여기에서도 `name` 은 특별한 필드명으로서,
