--- a/notes/0.3.0.markdown
+++ b/notes/0.3.0.markdown
@@ -19,8 +19,8 @@ This release is brought to you [eed3si9n][eed3si9n].
 - builds with sbt 0.11.
 - support for copying permission bits. [#24][24]
 - fixes charset issue. [#26][26]
-- changes github credential storage to `git config --global` or env
-  vars. see [local github config][1]. [#10][10]
+- changes GitHub credential storage to `git config --global` or env
+  vars. see [local GitHub config][1]. [#10][10]
 
   [1]: https://github.com/blog/180-local-github-config
   [10]: https://github.com/n8han/giter8/issues/10
