--- a/docs/00.md
+++ b/docs/00.md
@@ -6,7 +6,7 @@ Giter8
 ======
 
 Giter8 is a command line tool to generate files and directories from
-templates published on Github or any other git repository.
+templates published on GitHub or any other git repository.
 It's implemented in Scala and runs through the
 [sbt launcher][launcher], but it can produce
 output for any purpose.
