--- a/docs/03/00.md
+++ b/docs/03/00.md
@@ -33,7 +33,7 @@ This template is distributed without any warranty. See <https://creativecommons.
 
 ### template layout
 
-The g8 runtime looks for templates in two locations in a given Github project:
+The g8 runtime looks for templates in two locations in a given GitHub project:
 
 - If the `src/main/g8` directory is present it uses `src/main/g8` (`src` layout)
 - If it does not exist, then the root directory is used (root layout)
@@ -43,7 +43,7 @@ The g8 runtime looks for templates in two locations in a given Github project:
 This src layout is recommended so that it is easy for the template
 itself to be an sbt project. That way,
 an sbt plugin can be employed to locally test templates before pushing
-changes to github.
+changes to GitHub.
 
 The easy way to start a new template project is with a Giter8 template
 made expressly for that purpose:
@@ -72,7 +72,7 @@ might be referenced in the source as:
 
 The template fields themselves can be utilized to define the defaults
 of other fields.  For instance, you could build some URLs given the
-user's Github id:
+user's GitHub id:
 
 ```
 name = URL Builder
@@ -188,7 +188,7 @@ scalatest_version = maven(org.scalatest, scalatest_2.11, stable)
 ### root layout
 
 There's an experimental layout called root layout,
-which uses the root directory of the Github project as
+which uses the root directory of the GitHub project as
 the root of template.
 
 Since you can no longer include template fields in the files
