--- a/docs/04/00.md
+++ b/docs/04/00.md
@@ -33,7 +33,7 @@ className [Application]:
 
 ### Creating a scaffold
 
-The g8 runtime looks for scaffolds in the `src/main/scaffolds` in the given Github project.
+The g8 runtime looks for scaffolds in the `src/main/scaffolds` in the given GitHub project.
 Each directory inside `src/main/scaffolds` is a different scaffold, and will be
 accessible in the sbt shell using the directory name. Scaffold directories
 may have a `default.properties` file to define field values, just like
