--- a/docs/ko/00.md
+++ b/docs/ko/00.md
@@ -5,7 +5,7 @@ out: index.html
 Giter8
 ======
 
-Giter8 는, Github을 비롯한 Git 저장소에 게시 된 템플릿 사용하여 파일 및 디렉토리를 생성하기위한 명령 줄 도구입니다.
+Giter8 는, GitHub을 비롯한 Git 저장소에 게시 된 템플릿 사용하여 파일 및 디렉토리를 생성하기위한 명령 줄 도구입니다.
 Scala 를 사용하여 구현되어 있어, [sbt launcher][launcher] 를 사용하여 실행되지만, 그 출력은 어떤 용도로도 사용할 수 있습니다.
 
 ### sbt new 와의 통합
