--- a/notes/0.4.3.markdown
+++ b/notes/0.4.3.markdown
@@ -1,10 +1,10 @@
 ### Authentication
 
 This release reverts to name and password authentication, because
-github's v3 API does support the token authentication previously
+GitHub's v3 API does support the token authentication previously
 relied upon by giter8.  If you require access to templates in private
-repositories, configure your github user name (as before) as well as
-your github password:
+repositories, configure your GitHub user name (as before) as well as
+your GitHub password:
 
     git config --global github.user your-user-name
     git config --global github.password your-password
@@ -18,7 +18,7 @@ been stored in the clear. Contributions to upgrade to the
 ### Template Listing
 
 We have regretfully disabled template listing (`-l` and `--list`)
-because search is no longer supported in the github API.
+because search is no longer supported in the GitHub API.
 
 Later we hope to integrate with [ls.implicit.ly][ls] as a stable
 listing service.
