Switch to use the scala/scala-seed.g8 template

--- a/docs/00.md
+++ b/docs/00.md
@@ -16,7 +16,7 @@ output for any purpose.
 Starting sbt 0.13.13, Giter8 can be called from sbt's ["new" command][new] as follows:
 
 ```
-\$ sbt new eed3si9n/hello.g8
+\$ sbt new scala/scala-seed.g8
 ```
 
 ### Credits
