--- a/docs/ja/00.md
+++ b/docs/ja/00.md
@@ -13,7 +13,7 @@ Scala を使って実装されていて [sbt launcher][launcher] を使って実
 sbt 0.13.13 より、Giter8 は sbt の ["new" コマンド][new]から呼び出すことができる:
 
 ```
-\$ sbt new eed3si9n/hello.g8
+\$ sbt new scala/scala-seed.g8
 ```
 
 ### クレジット
