Switch installation from conscript to coursier

--- a/docs/ja/01.md
+++ b/docs/ja/01.md
@@ -5,25 +5,20 @@ out: setup.html
 セットアップ
 ----------
 
-Giter8 や他の Scala コマンドラインツールは [Conscript][cs]
-を使ってインストールすることができる。以下の方法で Conscript を `~/.conscript/bin/cs` としてインストールする:
+Giter8 や他の Scala コマンドラインツールは [Coursier][coursier]
+を使ってインストールすることができる。
 
-    curl https://raw.githubusercontent.com/foundweekends/conscript/master/setup.sh | sh
+    coursier install giter8
 
-(他のインストール方法もあるので [Conscript のインストール方法][cs]参照。)
-`cs` にパスが通った所で、以下の方法で Giter8 をインストール (もしくはアップグレード) できる:
-
-    cs foundweekends/giter8
-
-[cs]: http://www.foundweekends.org/conscript/ja/setup.html
+[coursier]: https://get-coursier.io/
 
 動作を確認するには `g8` をパラメータなしで実行する。
 Giter8 とその依存ライブラリがダウンロードされて使用方法が表示されるはずだ。
 
-アップグレードするときも同じ `cs` コマンドを実行すればいい。
+アップグレードするときも同じ `coursier install` コマンドを実行すればいい。
 
-Giter8 は OS X のパッケージマネジャーである [Homebrew][] からもインストール可能だ:
+Giter8 は macOS のパッケージマネジャーである [Homebrew][] からもインストール可能だ:
 
-    \$ brew update && brew install giter8
+    \$ brew install giter8
 
 [Homebrew]: https://brew.sh
