--- a/docs/ko/01.md
+++ b/docs/ko/01.md
@@ -5,25 +5,19 @@ out: setup.html
 설치
 ----------
 
-Giter8및 기타 Scala 명령줄 도구는 [Conscript][cs]
-를 사용하여 설치 할 수 있다. 다음의 방법으로 Conscript 을 `~/.conscript/bin/cs` 로 설치 합니다.
+Giter8및 기타 Scala 명령줄 도구는 [Coursier][coursier]
+를 사용하여 설치 할 수 있다.
+    coursier install giter8
 
-    curl https://raw.githubusercontent.com/foundweekends/conscript/master/setup.sh | sh
-
-(다른 설치 방법도 있으므로, [Conscript 의 설치방법][cs]참고.)
-PATH가 적용되어, `cs` 명령을 실행할 수 있는 위치에서、아래의 방법으로 Giter8 를 설치(또는 업그레이드)하는것이 가능합니다:
-
-    cs foundweekends/giter8
-
-[cs]: http://www.foundweekends.org/conscript/ja/setup.html
+[coursier]: https://get-coursier.io/
 
 동작을 확인 하려면, `g8` 매개변수 없이 실행 합니다.。
 Giter8 와 종속 라이브러리가 다운로드되어, 사용방법이 표시됩니다.
 
-업그레이드 시에도 같은 `cs` 실행하면 됩니다.
+업그레이드 시에도 같은 `coursier install` 실행하면 됩니다.
 
-Giter8 는 OS X 의 패키지 매니져인 [Homebrew][] 를 통해서도 설치가 가능 합니다.
+Giter8 는 macOS 의 패키지 매니져인 [Homebrew][] 를 통해서도 설치가 가능 합니다.
 
-    \$ brew update && brew install giter8
+    \$ brew install giter8
 
 [Homebrew]: https://brew.sh
