--- a/docs/01.md
+++ b/docs/01.md
@@ -6,26 +6,22 @@ Setup
 -----
 
 You can install Giter8 and other Scala command line tools with
-[Conscript][cs]. This will setup Conscript in `~/.conscript/bin/cs`:
+[Coursier][coursier]'s `install` command:
 
-    curl https://raw.githubusercontent.com/foundweekends/conscript/master/setup.sh | sh
+    coursier install giter8
 
-(See [Conscript's readme][cs] for a non-unixy option.) Once `cs` is
-on your path, you can install (or upgrade) giter8 with this command:
+(See [Coursier's docs][coursier] for how to install it.)
 
-    cs foundweekends/giter8
-
-[cs]: http://www.foundweekends.org/conscript/setup.html
+[coursier]: https://get-coursier.io/
 
 To make sure everything is working, try running `g8` with no
-parameters. This should download giter8 and its dependencies, then print
-a usage message.
+parameters. This should print a usage message.
 
 When it's time to upgrade to a new version of giter8, just run the
-same `cs` command again.
+same `coursier install` command again.
 
-Giter8 is also installable with the OS X package manager [Homebrew][]:
+Giter8 is also installable with the macOS package manager [Homebrew][]:
 
-    \$ brew update && brew install giter8
+    \$ brew install giter8
 
 [Homebrew]: https://brew.sh
