Run `coursier update giter8` to upgrade

--- a/docs/01.md
+++ b/docs/01.md
@@ -17,8 +17,8 @@ You can install Giter8 and other Scala command line tools with
 To make sure everything is working, try running `g8` with no
 parameters. This should print a usage message.
 
-When it's time to upgrade to a new version of giter8, just run the
-same `coursier install` command again.
+When it's time to upgrade to a new version of giter8, just run
+`coursier update giter8`.
 
 Giter8 is also installable with the macOS package manager [Homebrew][]:
 
