--- a/docs/03/00.md
+++ b/docs/03/00.md
@@ -211,3 +211,19 @@ Since you can no longer include template fields in the files
 under `project` its application is very limited.
 It might be useful for templates that are not for sbt builds
 or templates without any fields.
+
+### oneOf properties
+
+*oneOf properties* impose the property to be included in the provided set.
+
+The property value format is `oneOf(value1, value2, etc)`. At least one
+value must be provided, the first one being the default one.
+
+```
+name = My Template Project
+description = Creates a giter8 project template.
+fileFormat = oneOf(json, xml, txt)
+```
+
+If the parameter given by the user is not one of the provided options, the
+default will be applied (here `json`).
