--- a/docs/02.md
+++ b/docs/02.md
@@ -46,3 +46,32 @@ Any unsupplied parameters are assigned their default values.
 ### Private Repositories
 
 Giter8 will use your ssh key to access private repositories, just like git does.
+
+### SSH Agent
+
+Giter8 now support proxying to an SSH Agent which can be useful if you are using another SSH agent
+such as `gpg-agent`.
+
+Consider the following example:
+
+`~/.gitconfig`:
+
+    [url "ssh://git@github.com"]
+        insteadOf = https://github.com
+        
+`~/.profile`:
+
+    export SSH_AUTH_SOCK="$(gpgconf --list-dirs agent-ssh-socket)"
+    gpgconf --launch gpg-agent 
+
+Then this would have previously failed with:
+
+    \$ g8 unfiltered/unfiltered.g8
+    
+    ssh://git@github.com/unfiltered/unfiltered.g8.git: Auth fail
+
+This now works provided that the GitHub public key is in your known hosts file.
+
+You can do this by running:
+
+    \$ ssh -T git@github.com
