no longer used scalasti
https://github.com/foundweekends/giter8/commit/df63ff633c4025df72bc873d454a876fb1d4b395

--- a/docs/03/00.md
+++ b/docs/03/00.md
@@ -60,14 +60,13 @@ fields and their default values using the Java properties file format.
 or directly under the root of the template.
 Properties are simple keys and values that replace them.
 
-[StringTemplate][st], wrapped by [Scalasti][scalasti], is the engine
+[StringTemplate][st] is the engine
 that applies Giter8 templates, so template fields in source files are
 bracketed with the `\$` character. For example, a "classname" field
 might be referenced in the source as:
 
     class \$classname\$ {
 
-[scalasti]: http://bmc.github.com/scalasti/
 [st]: https://www.stringtemplate.org/
 
 The template fields themselves can be utilized to define the defaults
