Adding dollar escaping details

--- a/docs/03/00.md
+++ b/docs/03/00.md
@@ -89,6 +89,22 @@ project_url [https://github.com/n8han/my-proj]:
 developer_url [https://github.com/n8han]:
 ```
 
+Dollar signs can be escaped to avoid resolution:
+
+```
+val foo = "foo"
+val bar = "bar"
+println(s"\\$foo\\$bar")
+```
+
+This would yield to:
+
+```
+val foo = "foo"
+val bar = "bar"
+println(s"\$foo\$bar")
+```
+
 ### Conditionals
 
 All fields have a property named `truthy` to be used in [conditional expressions][conditionals].
