Add coursier based installation instructions

--- a/docs/01.md
+++ b/docs/01.md
@@ -5,6 +5,8 @@ out: setup.html
 Setup
 -----
 
+#### Conscript
+
 You can install Giter8 and other Scala command line tools with
 [Conscript][cs]. This will setup Conscript in `~/.conscript/bin/cs`:
 
@@ -24,8 +26,15 @@ a usage message.
 When it's time to upgrade to a new version of giter8, just run the
 same `cs` command again.
 
-Giter8 is also installable with the OS X package manager [Homebrew][]:
+#### Coursier
 
-    \$ brew update && brew install giter8
+Giter8 and other Scala command line tools can be installed using [Coursier](https://get-coursier.io/). 
+See the coursier [installation instruction](https://get-coursier.io/docs/cli-installation) to add it to your path.
+Pay attention to the binary name since it's `cs` as the Conscript binary. Once `cs` is
+on your path, you can install giter8 with this command:
 
-[Homebrew]: https://brew.sh
+    cs install giter8
+
+and update it using:
+
+    cs update giter8
