--- a/docs/01.md
+++ b/docs/01.md
@@ -25,5 +25,5 @@ It's possible to manually download and install giter8 directly from Maven Centra
     \$ chmod +x ~/bin/g8
 
 Replace `~/bin/` with anything that is on your `PATH`. To make sure everything is working, try running `g8` with no
-parameters, 
+parameters.
 
