Add g8ScaffoldForce command to overwrite files

--- a/docs/04/00.md
+++ b/docs/04/00.md
@@ -23,6 +23,12 @@ Use TAB completion to discover available templates.
 controller   global       model
 ```
 
+To overwrite existing files pass the `--force` flag after the template:
+
+```
+> g8Scaffold model --force
+```
+
 The template plugin will prompt each property that needed to complete the scaffolding process:
 
 ```
