--- a/docs/05.md
+++ b/docs/05.md
@@ -38,4 +38,4 @@ You can either delete existing version of giter8, or change `PATH` variable such
 From a shell session run `cs foundweekends/giter8`.
 
 [official page]: https://github.com/foundweekends/conscript
-[conscript]: http://www.foundweekends.org/conscript/
+[conscript]: https://www.foundweekends.org/conscript/
